--- a/PaymentApp/src/app/payment-details/payment-detail-form/payment-detail-form.component.html
+++ b/PaymentApp/src/app/payment-details/payment-detail-form/payment-detail-form.component.html
@@ -1,1 +1,43 @@
-<p>payment-detail-form works!</p>
+<form #form = "ngForm" (submit)="onSubmit(form)" 
+[class.submitted] = "service.formSubmitted" novalidate autocomplete="off" >
+    <input type="hidden" name="paymentDetailId" [value]="service.formData.paymentDetailId">
+    <div class="mb-3">
+      <label>Card Owner Number</label>
+      <input class="form-control form-control-lg" 
+        placeholder="Name of Card"
+        #cardOwnerName="ngModel" name="cardOwnerName"
+        [(ngModel)]="service.formData.cardOwnerName"
+        required>
+    </div>
+    <div class="mb-3">
+      <label>Card Number</label>
+      <input class="form-control form-control-lg" 
+        placeholder="16 digits"
+        #cardNumber="ngModel" name="cardNumber"
+        [(ngModel)]="service.formData.cardNumber"
+        required minlength="16" maxlength="16">
+    </div>
+    <div class="row">
+        <div class="mb-3 col-6">
+            <label>Security Code</label>
+            <input class="form-control form-control-lg" 
+              placeholder="CVV"
+              #securityCode="ngModel" name="securityCode"
+              [(ngModel)]="service.formData.securityCode"
+              required minlength="3" maxlength="3">
+          </div>
+          <div class="mb-3 col-6">
+            <label>Valid Through</label>
+            <input class="form-control form-control-lg" 
+              placeholder="MM/YY"
+              #expirationDate="ngModel" name="expirationDate"
+              [(ngModel)]="service.formData.expirationDate"
+              required minlength="6" maxlength="6">
+          </div>
+    </div>
+    <div class="d-grid">
+      <button class="btn btn-lg btn-success" type="submit">
+        Submit
+      </button>
+    </div>
+  </form>
