--- a/PaymentApp/src/app/payment-details/payment-details.component.html
+++ b/PaymentApp/src/app/payment-details/payment-details.component.html
@@ -8,6 +8,17 @@
         <app-payment-detail-form/>
     </div>
     <div class="col-6">
-        List of payments 
+        <ul class="listgroup">
+            <li class="list-group-item d-flex justify-content-between align-items-start mb-2 border px-4 py-3 rounded-3" *ngFor = "let pd of service.list">
+                <div class="flex-grow-1 mouse-hover" (click)="populateForm(pd)">
+                    <div class="fw-bold">{{pd.cardOwnerName}}</div>
+                    <div>{{pd.cardNumber}}</div>
+                    <div class="fw-bold">{{pd.expirationDate}}</div>
+                </div>
+                <span class="text-secondary">
+                    <i class="fa-solid fa-trash fg-lg mouse-hover"></i>
+                </span>
+            </li>
+        </ul> 
     </div>
 </div>
