--- a/PaymentApp/src/app/payment-details/payment-details.component.html
+++ b/PaymentApp/src/app/payment-details/payment-details.component.html
@@ -1,5 +1,5 @@
 <div class="bg-body-secondary text-center py-5 rounded-2">
-    <h1 class="dispay-6 fw-bold">
+    <h1 class="display-6 fw-bold">
         Payment Details
     </h1>
 </div>
@@ -8,15 +8,31 @@
         <app-payment-detail-form/>
     </div>
     <div class="col-6">
-        <ul class="listgroup">
-            <li class="list-group-item d-flex justify-content-between align-items-start mb-2 border px-4 py-3 rounded-3" *ngFor = "let pd of service.list">
-                <div class="flex-grow-1 mouse-hover" (click)="populateForm(pd)">
+        <ul class="list-group">
+            <li class="list-group-item d-flex justify-content-between align-items-start mb-2 border px-4 py-3 rounded-3" *ngFor="let pd of service.list">
+                <!-- Display mode -->
+                <div class="flex-grow-1" *ngIf="!pd.isEditing">
                     <div class="fw-bold">{{pd.cardOwnerName}}</div>
                     <div>{{pd.cardNumber}}</div>
                     <div class="fw-bold">{{pd.expirationDate}}</div>
                 </div>
-                <span class="text-secondary">
-                    <i class="fa-solid fa-trash fg-lg mouse-hover"></i>
+                <!-- Edit mode -->
+                <div class="flex-grow-1" *ngIf="pd.isEditing">
+                    <input class="form-control mb-2" [(ngModel)]="pd.cardOwnerName" placeholder="Card Owner Name">
+                    <input class="form-control mb-2" [(ngModel)]="pd.cardNumber" placeholder="Card Number">
+                    <input class="form-control mb-2" [(ngModel)]="pd.expirationDate" placeholder="Expiration Date">
+                </div>
+                <!-- Buttons -->
+                <span class="text-secondary d-flex align-items-center">
+                    <!-- Edit/Save button -->
+                    <button class="btn btn-sm me-2" 
+                            [class.btn-primary]="!pd.isEditing" 
+                            [class.btn-success]="pd.isEditing" 
+                            (click)="toggleEdit(pd)">
+                        {{ pd.isEditing ? 'Save' : 'Edit' }}
+                    </button>
+                    <!-- Delete button -->
+                    <i class="fa-solid fa-trash fg-lg mouse-hover" (click)="onDelete(pd.paymentDetailId)"></i>
                 </span>
             </li>
         </ul> 
