Include the refresk onCreate and Delete

--- a/PaymentApp/src/app/payment-details/payment-details.component.html
+++ b/PaymentApp/src/app/payment-details/payment-details.component.html
@@ -25,7 +25,7 @@
                 <!-- Buttons -->
                 <span class="text-secondary d-flex align-items-center">
                     <!-- Edit/Save button -->
-                    <button class="btn btn-sm me-2" 
+                    <button class="btn btn-sm me-1 custom-small-button"
                             [class.btn-primary]="!pd.isEditing" 
                             [class.btn-success]="pd.isEditing" 
                             (click)="toggleEdit(pd)">
